Fix issue with background breaking up on small screens.

--- a/public/stylesheets/client.css
+++ b/public/stylesheets/client.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    min-height: 100%;
     background-color: #CCCCCC;
     box-shadow: inset 0 0 50vw 0 rgba(0,0,0,0.3);
 }
